test/files/neg/t5666.check
t5666.scala:2: error: class Any is abstract; cannot be instantiated
  new Any
  ^
t5666.scala:3: error: class AnyVal is abstract; cannot be instantiated
  new AnyVal
  ^
t5666.scala:4: error: class Double is abstract; cannot be instantiated
  new Double
  ^
t5666.scala:5: error: class Float is abstract; cannot be instantiated
  new Float
  ^
t5666.scala:6: error: class Long is abstract; cannot be instantiated
  new Long
  ^
t5666.scala:7: error: class Int is abstract; cannot be instantiated
  new Int
  ^
t5666.scala:8: error: class Char is abstract; cannot be instantiated
  new Char
  ^
t5666.scala:9: error: class Short is abstract; cannot be instantiated
  new Short
  ^
t5666.scala:10: error: class Byte is abstract; cannot be instantiated
  new Byte
  ^
t5666.scala:11: error: class Boolean is abstract; cannot be instantiated
  new Boolean
  ^
t5666.scala:12: error: class Unit is abstract; cannot be instantiated
  new Unit
  ^
t5666.scala:13: error: class Nothing is abstract; cannot be instantiated
  new Nothing
  ^
12 errors found
